--- a/bungaku-auth/package.json
+++ b/bungaku-auth/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "node-mysql-login-api",
+    "name": "bungaku-auth",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
