--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,12 @@
 node_modules
 npm-debug.log
+.git
+.gitignore
 node_modules
 npm-debug.log
 Dockerfile*
 docker-compose*
+README.md
+LICENSE
 .vscode
 .idea
-.env
