Update example.env to suit new database.js

--- a/example.env
+++ b/example.env
@@ -1,2 +1,9 @@
+// Define Port
 APP_PORT = 3000
+// Define session secret
 SESS_SECRET = jangan_hack_aku_bang_dosabesar
+// Define Database
+DB_NAME = nama_database
+DB_USER = usernae_database
+DB_PASS = password_database
+DB_HOST = server_database
