--- a/example.env
+++ b/example.env
@@ -4,6 +4,6 @@ APP_PORT = 3000
 SESS_SECRET = jangan_hack_aku_bang_dosabesar
 // Define Database
 DB_NAME = nama_database
-DB_USER = usernae_database
+DB_USER = username_database
 DB_PASS = password_database
 DB_HOST = server_database
