--- a/example.env
+++ b/example.env
@@ -1,9 +1,11 @@
+// Node enviroment
+NODE_ENV = production
 // Define Port
 APP_PORT = 3000
 // Define session secret
-SESS_SECRET = jangan_hack_aku_bang_dosabesar
+SESS_SECRET=jangan_hack_aku_bang_dosabesar
 // Define Database
-DB_NAME = nama_database
-DB_USER = username_database
-DB_PASS = password_database
-DB_HOST = server_database
+DB_NAME=nama_database
+DB_USER=username_database
+DB_PASS=password_database
+DB_HOST=server_databaseS
