--- a/example.env
+++ b/example.env
@@ -1,5 +1,6 @@
+DOMAIN=yourdomain
 // Node enviroment
-NODE_ENV = production
+NODE_ENV=production
 // Define Port
 APP_PORT = 3000
 // Define session secret
